--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -220,4 +220,172 @@
       }
     }
   }
+
+  .section-5 {
+    h2 {
+      @each $property, $value in vars.$heading {
+        #{$property}: $value;
+      }
+      margin-bottom: 3rem;
+      @media (max-width: 1000px) {
+        padding: 2rem;
+      }
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 3rem;
+      @media (max-width: 1250px) {
+        gap: 1rem;
+      }
+      @media (max-width: 1150px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: 1000px) {
+        padding: 2rem;
+      }
+      @media (max-width: 850px) {
+        grid-template-columns: 1fr;
+      }
+      .card {
+        display: flex;
+        flex-direction: column;
+
+        cursor: alias;
+        &:hover {
+          .image {
+            position: relative;
+            &::after {
+              content: "";
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              top: 0;
+              left: 0;
+              background: #00000072;
+              transition: background 0.5s;
+            }
+          }
+        }
+        .image {
+          border-radius: 23px;
+          overflow: hidden;
+          img {
+            width: 100%;
+          }
+        }
+        .info_card {
+          border-radius: 23px;
+          background: #fff;
+          box-shadow: 0px 3px 3px 0px #00000029;
+          padding: 1.3rem;
+          transform: translateY(-40px);
+          overflow: hidden;
+
+          .head_info_card {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1rem;
+            gap: 1rem;
+            .square {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              border: 3px solid #7e7e7e;
+              padding: 0.3rem 0.8rem;
+              span {
+                &:first-child {
+                  color: #7e7e7e;
+                  font-weight: 700;
+                  font-size: 1.5rem;
+                }
+              }
+            }
+          }
+          .body_info_card {
+            font-weight: 400;
+            font-size: 0.9rem;
+            margin-bottom: 1.5rem;
+          }
+          .footer_card {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            span {
+              &:nth-child(2) {
+                color: #013e8d;
+                text-transform: uppercase;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .section-6 {
+    background: url("../images/section6.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    @media (max-width: 750px) {
+      position: relative;
+    }
+    ul {
+      display: flex;
+      height: 100%;
+      justify-content: space-around;
+      @media (max-width: 750px) {
+        display: none;
+      }
+      li {
+        max-width: 150px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        margin-top: 20vh;
+        color: vars.$blue;
+        span {
+          font-size: 3.5rem;
+          font-weight: 500;
+          @media (max-width: 1200px) {
+            font-size: 3rem;
+          }
+          @media (max-width: 1000px) {
+            font-size: 2rem;
+          }
+        }
+        p {
+          font-size: 1.3rem;
+          @media (max-width: 1200px) {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+    .logo_lext {
+      transform: translateY(-100px);
+      margin-left: 100px;
+      text-transform: uppercase;
+      @media (max-width: 750px) {
+        margin-left: 0;
+        position: absolute;
+        bottom: 3rem;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      h3 {
+        &:nth-child(1) {
+          font-weight: 400;
+        }
+      }
+    }
+  }
 }
