--- a/styles/_rating.scss
+++ b/styles/_rating.scss
@@ -62,6 +62,7 @@
   }
   .line_chart_wrap {
     margin-bottom: 100px;
+    max-width: 1200px;
     .Button_switch {
       background-color: #e1f7ff;
       border-radius: 30px;
@@ -76,6 +77,7 @@
         padding: 14px 20px;
         border-radius: 30px;
         color: vars.$blue;
+        cursor: pointer;
         &:nth-child(2) {
           flex: 1;
         }
@@ -86,6 +88,55 @@
       button.active {
         background: vars.$blue;
         color: #fff;
+      }
+    }
+    .line_chart {
+      #chart-container {
+        height: 350px;
+        max-width: 1500px;
+        margin: auto;
+        padding-top: 50px;
+      }
+    }
+    .country_name {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      margin-bottom: 20px;
+      span {
+        &:first-child {
+          width: 14px;
+          aspect-ratio: 1/1;
+          background: vars.$blue;
+          border-radius: 4px;
+        }
+        &:last-child {
+          color: #64748b;
+        }
+      }
+    }
+    .button-container {
+      margin-top: 20px;
+      .filter-btn {
+        background: #effaff;
+        padding: 14px 25px;
+        outline: none;
+        border: none;
+        border-radius: 10px;
+        color: vars.$blue;
+        cursor: pointer;
+        margin: 5px;
+        transition: all 0.3s ease;
+      }
+
+      .active {
+        background-color: vars.$blue;
+        color: white;
+      }
+
+      .filter-btn:hover {
+        background-color: #0056b3;
+        color: white;
       }
     }
   }
