--- a/styles/_rating.scss
+++ b/styles/_rating.scss
@@ -115,28 +115,79 @@
         }
       }
     }
-    .button-container {
-      margin-top: 20px;
-      .filter-btn {
-        background: #effaff;
-        padding: 14px 25px;
-        outline: none;
-        border: none;
-        border-radius: 10px;
-        color: vars.$blue;
-        cursor: pointer;
-        margin: 5px;
-        transition: all 0.3s ease;
-      }
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 3rem;
+      .button-container {
+        .filter-btn {
+          background: #effaff;
+          padding: 14px 25px;
+          outline: none;
+          border: none;
+          border-radius: 10px;
+          color: vars.$blue;
+          cursor: pointer;
+          margin: 5px;
+          transition: all 0.3s ease;
+        }
 
-      .active {
-        background-color: vars.$blue;
-        color: white;
-      }
+        .active {
+          background-color: vars.$blue;
+          color: white;
+        }
 
-      .filter-btn:hover {
-        background-color: #0056b3;
-        color: white;
+        .filter-btn:hover {
+          background-color: #0056b3;
+          color: white;
+        }
+      }
+      .form_input {
+        display: flex;
+        flex: 1;
+        gap: 15px;
+        .input {
+          flex: 1;
+          width: 100%;
+          border: 1px solid #b2bbc6;
+          padding: 12px 10px;
+          border-radius: 12px;
+          width: 100%;
+          input {
+            border: none;
+            outline: none;
+            width: 100%;
+            &::placeholder {
+              color: #b2bbc6;
+            }
+          }
+        }
+        button {
+          padding: 0 25px;
+          border: none;
+          outline: none;
+          border-radius: 12px;
+          cursor: pointer;
+          transition: all 0.5s;
+        }
+        .first-btn {
+          background: vars.$blue;
+          color: white;
+          &:hover {
+            background: #effaff;
+            color: vars.$blue;
+            border: 1px solid vars.$blue;
+          }
+        }
+        .next-btn {
+          background: #ffedec;
+          color: red;
+          &:hover {
+            background: red;
+            color: white;
+          }
+        }
       }
     }
   }
