--- a/styles/_rating.scss
+++ b/styles/_rating.scss
@@ -8,11 +8,21 @@
       font-size: 2.3rem;
       color: vars.$blue;
       margin-bottom: 1.5rem;
+      @media (max-width: 1000px) {
+        font-size: 1.5rem;
+      }
     }
     p {
       text-transform: uppercase;
       margin-bottom: 2.5rem;
       line-height: 150%;
+      @media (max-width: 1000px) {
+        font-size: 0.8rem;
+        margin-bottom: 2rem;
+      }
+      @media (max-width: 800px) {
+        margin-bottom: 1rem;
+      }
     }
   }
   ul {
@@ -59,6 +69,12 @@
     font-size: 2.3rem;
     color: vars.$blue;
     margin-bottom: 1.5rem;
+    @media (max-width: 1000px) {
+      font-size: 1.5rem;
+    }
+    @media (max-width: 800px) {
+      font-size: 1.2rem;
+    }
   }
   .line_chart_wrap {
     margin-bottom: 100px;
@@ -120,6 +136,11 @@
       justify-content: space-between;
       align-items: center;
       gap: 3rem;
+      @media (max-width: 850px) {
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+      }
       .button-container {
         .filter-btn {
           background: #effaff;
@@ -131,6 +152,10 @@
           cursor: pointer;
           margin: 5px;
           transition: all 0.3s ease;
+          @media (max-width: 500px) {
+            padding: 13px 20px;
+            margin: 0;
+          }
         }
 
         .active {
@@ -171,9 +196,22 @@
           cursor: pointer;
           transition: all 0.5s;
         }
+
         .first-btn {
           background: vars.$blue;
           color: white;
+          &.desktop {
+            @media (max-width: 1000px) {
+              display: none;
+            }
+          }
+          &.responsive {
+            padding: 0 15px;
+            display: none;
+            @media (max-width: 1000px) {
+              display: block;
+            }
+          }
           &:hover {
             background: #effaff;
             color: vars.$blue;
@@ -186,6 +224,24 @@
           &:hover {
             background: red;
             color: white;
+          }
+          &.responsive {
+            display: none;
+            padding: 0 18px;
+            background: #ffedec;
+            color: red;
+            &:hover {
+              background: red;
+              color: white;
+            }
+            @media (max-width: 1000px) {
+              display: block;
+            }
+          }
+          &.desktop {
+            @media (max-width: 1000px) {
+              display: none;
+            }
           }
         }
       }
