--- a/styles/style.css
+++ b/styles/style.css
@@ -924,10 +924,26 @@ footer {
   color: #0094cb;
   margin-bottom: 1.5rem;
 }
+@media (max-width: 1000px) {
+  #rating .info h2 {
+    font-size: 1.5rem;
+  }
+}
 #rating .info p {
   text-transform: uppercase;
   margin-bottom: 2.5rem;
   line-height: 150%;
+}
+@media (max-width: 1000px) {
+  #rating .info p {
+    font-size: 0.8rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 800px) {
+  #rating .info p {
+    margin-bottom: 1rem;
+  }
 }
 #rating ul {
   display: flex;
@@ -979,6 +995,16 @@ footer {
   font-size: 2.3rem;
   color: #0094cb;
   margin-bottom: 1.5rem;
+}
+@media (max-width: 1000px) {
+  #rating h2 {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 800px) {
+  #rating h2 {
+    font-size: 1.2rem;
+  }
 }
 #rating .line_chart_wrap {
   margin-bottom: 100px;
@@ -1038,6 +1064,13 @@ footer {
   align-items: center;
   gap: 3rem;
 }
+@media (max-width: 850px) {
+  #rating .line_chart_wrap .controls {
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+  }
+}
 #rating .line_chart_wrap .controls .button-container .filter-btn {
   background: #effaff;
   padding: 14px 25px;
@@ -1048,6 +1081,12 @@ footer {
   cursor: pointer;
   margin: 5px;
   transition: all 0.3s ease;
+}
+@media (max-width: 500px) {
+  #rating .line_chart_wrap .controls .button-container .filter-btn {
+    padding: 13px 20px;
+    margin: 0;
+  }
 }
 #rating .line_chart_wrap .controls .button-container .active {
   background-color: #0094cb;
@@ -1090,6 +1129,20 @@ footer {
   background: #0094cb;
   color: white;
 }
+@media (max-width: 1000px) {
+  #rating .line_chart_wrap .controls .form_input .first-btn.desktop {
+    display: none;
+  }
+}
+#rating .line_chart_wrap .controls .form_input .first-btn.responsive {
+  padding: 0 15px;
+  display: none;
+}
+@media (max-width: 1000px) {
+  #rating .line_chart_wrap .controls .form_input .first-btn.responsive {
+    display: block;
+  }
+}
 #rating .line_chart_wrap .controls .form_input .first-btn:hover {
   background: #effaff;
   color: #0094cb;
@@ -1102,6 +1155,26 @@ footer {
 #rating .line_chart_wrap .controls .form_input .next-btn:hover {
   background: red;
   color: white;
+}
+#rating .line_chart_wrap .controls .form_input .next-btn.responsive {
+  display: none;
+  padding: 0 18px;
+  background: #ffedec;
+  color: red;
+}
+#rating .line_chart_wrap .controls .form_input .next-btn.responsive:hover {
+  background: red;
+  color: white;
+}
+@media (max-width: 1000px) {
+  #rating .line_chart_wrap .controls .form_input .next-btn.responsive {
+    display: block;
+  }
+}
+@media (max-width: 1000px) {
+  #rating .line_chart_wrap .controls .form_input .next-btn.desktop {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
