--- a/styles/_rating.scss
+++ b/styles/_rating.scss
@@ -118,7 +118,7 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      margin-bottom: 20px;
+      margin: 20px 0;
       span {
         &:first-child {
           width: 14px;
